# tamil-textprep

./: LICENSE  README.md  pyproject.toml
tamil_textprep/: __init__.py  api.py  classify.py  cli.py  lexicon.py  numwords.py  verbalize.py
tamil_textprep/data/: english_exceptions.json
tests/: test_reverse_transliteration.py  test_textprep.py
tools/: audit_allowlist.json  corpus_audit.py  register_split.py
