[project]
name = "tamil-textprep"
version = "0.2.1"
description = "Eezham-Tamil text preparation for TTS: sanitize, classify, verbalize numerals, English-exception table. Shared by Aravam Voice, ThaiVeedu archive audio, VoxTN voice agents."
requires-python = ">=3.10"
dependencies = ["open-tamil>=1.1"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
test = ["pytest>=8"]

[project.scripts]
tamil-textprep = "tamil_textprep.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tamil_textprep"]

[tool.setuptools.package-data]
tamil_textprep = ["data/*.json"]
